[project]
name = "lead_qualifier"
version = "0.1.0"
description = "lead_qualifier using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
lead_qualifier = "lead_qualifier.main:run"
run_crew = "lead_qualifier.main:run"
train = "lead_qualifier.main:train"
replay = "lead_qualifier.main:replay"
test = "lead_qualifier.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
